--- a/Aprendo con Molly/Inicio.xaml
+++ b/Aprendo con Molly/Inicio.xaml
@@ -1,46 +1,96 @@
 ﻿<Window
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
 	x:Class="Aprendo_con_Molly.Inicio"
 	x:Name="Window"
 	Title="Inicio"
-	Width="936" Height="614" Background="Transparent" Visibility="Visible" WindowStyle="None" AllowsTransparency="True" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="pack://siteoforigin:,,,/Molly.ico">
-    <Grid HorizontalAlignment="Left" Height="460" Margin="6,124,0,0" VerticalAlignment="Top" Width="700">
-        <Grid.Background>
-            <ImageBrush/>
-        </Grid.Background>
-        <Ellipse HorizontalAlignment="Left" Height="474" Stroke="Black" VerticalAlignment="Top" Width="627.015" Margin="28,0,0,0">
-            <Ellipse.Fill>
-                <ImageBrush ImageSource="images.jpg"/>
-            </Ellipse.Fill>
-        </Ellipse>
-        <Image Margin="553.015,-38,-236.015,-14" Source="Molly.png" Stretch="Fill"/>
-        <Rectangle HorizontalAlignment="Left" Margin="0,338,0,-24" Stroke="Black" Width="687" RenderTransformOrigin="0.5,0.5" RadiusY="20.437" RadiusX="20.437">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0.051"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-            <Rectangle.Fill>
-                <RadialGradientBrush>
-                    <GradientStop Color="#FF152301" Offset="0"/>
-                    <GradientStop Color="#FF93D630" Offset="1"/>
-                </RadialGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>
-        <ProgressBar x:Name="barraProgreso" Margin="192,454,220,-7" RenderTransformOrigin="0.5,0.5" Foreground="#FF06B00E">
-            <ProgressBar.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleY="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </ProgressBar.RenderTransform>
-        </ProgressBar>
-        <Image Margin="3,369,10,0" Stretch="Fill"/>
-    </Grid>
+	Width="1006" Height="614" Background="Transparent" Visibility="Visible" WindowStyle="None" AllowsTransparency="True" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="pack://siteoforigin:,,,/Molly.ico">
+	<Grid HorizontalAlignment="Left" Height="460" Margin="6,124,0,0" VerticalAlignment="Top" Width="700">
+		<Grid.Background>
+			<ImageBrush/>
+		</Grid.Background>
+		<Ellipse HorizontalAlignment="Left" Height="578" Stroke="Black" VerticalAlignment="Top" Width="739.015" Margin="48,-104,-87.015,-14">
+			<Ellipse.Effect>
+				<DropShadowEffect BlurRadius="3" Color="#FF185F07" Direction="200" Opacity="0.75" ShadowDepth="8"/>
+			</Ellipse.Effect>
+			<Ellipse.Fill>
+				<ImageBrush ImageSource="images.jpg"/>
+			</Ellipse.Fill>
+		</Ellipse>
+		<Viewport3D Margin="621.015,-38,-304.015,-14" >
+			<Viewport3D.Camera>
+				<PerspectiveCamera FieldOfView="45" FarPlaneDistance="100" LookDirection="-2.122,0.236,-17.933" NearPlaneDistance="0.1" Position="2.122,-0.236,17.933" UpDirection="0.002,1,0.013"/>
+			</Viewport3D.Camera>
+			<ModelVisual3D x:Name="ModelContainer">
+				<ModelVisual3D.Content>
+					<GeometryModel3D x:Name="Model" d:Bounds="-7.48046875,-10,0,14.9609375,20,0">
+						<GeometryModel3D.Geometry>
+							<MeshGeometry3D Normals="0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1
+0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1
+0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1
+0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1
+0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1
+0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1
+0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1
+0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1 0,0,1" Positions="-7.4804688,-10,0 -5.8181424,-10,0 -4.155816,-10,0 -2.4934896,-10,0 -0.83116319,-10,0 0.83116319,-10,0 2.4934896,-10,0 4.155816,-10,0 5.8181424,-10,0 7.4804688,-10,0 -7.4804688,-7.7777778,0 -5.8181424,-7.7777778,0 -4.155816,-7.7777778,0
+-2.4934896,-7.7777778,0 -0.83116319,-7.7777778,0 0.83116319,-7.7777778,0 2.4934896,-7.7777778,0 4.155816,-7.7777778,0 5.8181424,-7.7777778,0 7.4804688,-7.7777778,0 -7.4804688,-5.5555556,0 -5.8181424,-5.5555556,0 -4.155816,-5.5555556,0 -2.4934896,-5.5555556,0 -0.83116319,-5.5555556,0 0.83116319,-5.5555556,0
+2.4934896,-5.5555556,0 4.155816,-5.5555556,0 5.8181424,-5.5555556,0 7.4804688,-5.5555556,0 -7.4804688,-3.3333333,0 -5.8181424,-3.3333333,0 -4.155816,-3.3333333,0 -2.4934896,-3.3333333,0 -0.83116319,-3.3333333,0 0.83116319,-3.3333333,0 2.4934896,-3.3333333,0 4.155816,-3.3333333,0 5.8181424,-3.3333333,0
+7.4804688,-3.3333333,0 -7.4804688,-1.1111111,0 -5.8181424,-1.1111111,0 -4.155816,-1.1111111,0 -2.4934896,-1.1111111,0 -0.83116319,-1.1111111,0 0.83116319,-1.1111111,0 2.4934896,-1.1111111,0 4.155816,-1.1111111,0 5.8181424,-1.1111111,0 7.4804688,-1.1111111,0 -7.4804688,1.1111111,0 -5.8181424,1.1111111,0
+-4.155816,1.1111111,0 -2.4934896,1.1111111,0 -0.83116319,1.1111111,0 0.83116319,1.1111111,0 2.4934896,1.1111111,0 4.155816,1.1111111,0 5.8181424,1.1111111,0 7.4804688,1.1111111,0 -7.4804688,3.3333333,0 -5.8181424,3.3333333,0 -4.155816,3.3333333,0 -2.4934896,3.3333333,0 -0.83116319,3.3333333,0
+0.83116319,3.3333333,0 2.4934896,3.3333333,0 4.155816,3.3333333,0 5.8181424,3.3333333,0 7.4804688,3.3333333,0 -7.4804688,5.5555556,0 -5.8181424,5.5555556,0 -4.155816,5.5555556,0 -2.4934896,5.5555556,0 -0.83116319,5.5555556,0 0.83116319,5.5555556,0 2.4934896,5.5555556,0 4.155816,5.5555556,0
+5.8181424,5.5555556,0 7.4804688,5.5555556,0 -7.4804688,7.7777778,0 -5.8181424,7.7777778,0 -4.155816,7.7777778,0 -2.4934896,7.7777778,0 -0.83116319,7.7777778,0 0.83116319,7.7777778,0 2.4934896,7.7777778,0 4.155816,7.7777778,0 5.8181424,7.7777778,0 7.4804688,7.7777778,0 -7.4804688,10,0
+-5.8181424,10,0 -4.155816,10,0 -2.4934896,10,0 -0.83116319,10,0 0.83116319,10,0 2.4934896,10,0 4.155816,10,0 5.8181424,10,0 7.4804688,10,0" TextureCoordinates="0,512 42.555556,512 85.111111,512 127.66667,512 170.22222,512 212.77778,512 255.33333,512 297.88889,512 340.44444,512 383,512 0,455.11111 42.555556,455.11111 85.111111,455.11111 127.66667,455.11111 170.22222,455.11111 212.77778,455.11111 255.33333,455.11111 297.88889,455.11111 340.44444,455.11111 383,455.11111 0,398.22222 42.555556,398.22222 85.111111,398.22222
+127.66667,398.22222 170.22222,398.22222 212.77778,398.22222 255.33333,398.22222 297.88889,398.22222 340.44444,398.22222 383,398.22222 0,341.33333 42.555556,341.33333 85.111111,341.33333 127.66667,341.33333 170.22222,341.33333 212.77778,341.33333 255.33333,341.33333 297.88889,341.33333 340.44444,341.33333 383,341.33333 0,284.44444 42.555556,284.44444 85.111111,284.44444 127.66667,284.44444 170.22222,284.44444 212.77778,284.44444
+255.33333,284.44444 297.88889,284.44444 340.44444,284.44444 383,284.44444 0,227.55556 42.555556,227.55556 85.111111,227.55556 127.66667,227.55556 170.22222,227.55556 212.77778,227.55556 255.33333,227.55556 297.88889,227.55556 340.44444,227.55556 383,227.55556 0,170.66667 42.555556,170.66667 85.111111,170.66667 127.66667,170.66667 170.22222,170.66667 212.77778,170.66667 255.33333,170.66667 297.88889,170.66667 340.44444,170.66667
+383,170.66667 0,113.77778 42.555556,113.77778 85.111111,113.77778 127.66667,113.77778 170.22222,113.77778 212.77778,113.77778 255.33333,113.77778 297.88889,113.77778 340.44444,113.77778 383,113.77778 0,56.888889 42.555556,56.888889 85.111111,56.888889 127.66667,56.888889 170.22222,56.888889 212.77778,56.888889 255.33333,56.888889 297.88889,56.888889 340.44444,56.888889 383,56.888889 0,0 42.555556,0
+85.111111,0 127.66667,0 170.22222,0 212.77778,0 255.33333,0 297.88889,0 340.44444,0 383,0" TriangleIndices="0 1 10 1 11 10 1 2 11 2 12 11 2 3 12 3 13 12 3 4 13 4 14 13 4 5 14 5 15 14 5 6 15 6 16 15 6 7 16 7 17 16 7 8 17 8 18 17 8 9 18 9 19 18 10 11 20 11 21 20 11 12 21 12 22 21 12 13 22 13 23 22 13 14 23 14 24 23 14 15 24 15 25 24 15 16 25 16 26 25 16 17 26 17 27 26 17 18 27 18 28 27 18 19 28 19 29 28 20 21 30 21 31 30 21 22 31 22 32 31 22 23 32 23 33 32 23 24 33 24 34 33 24 25 34 25 35 34 25 26 35 26 36 35 26 27 36 27 37 36 27 28 37 28 38 37 28 29 38 29 39 38 30 31 40 31 41 40 31 32 41 32 42 41 32 33 42 33 43 42 33 34 43 34 44 43 34 35 44 35 45 44 35 36 45 36 46 45 36 37 46 37 47 46 37 38 47 38 48 47 38 39 48 39 49 48 40 41 50 41 51 50 41 42 51 42 52 51 42 43 52 43 53 52 43 44 53 44 54 53 44 45 54 45 55 54 45 46 55 46 56 55 46 47 56 47 57 56 47 48 57 48 58 57 48 49 58 49 59 58 50 51 60 51 61 60 51 52 61 52 62 61 52 53 62 53 63 62 53 54 63 54 64 63 54 55 64 55 65 64 55 56 65 56 66 65 56 57 66 57 67 66 57 58 67 58 68 67 58 59 68 59 69 68 60 61 70 61 71 70 61 62 71 62 72 71 62 63 72 63 73 72 63 64 73 64 74 73 64 65 74 65 75 74 65 66 75 66 76 75 66 67 76 67 77 76 67 68 77 68 78 77 68 69 78 69 79 78 70 71 80 71 81 80 71 72 81 72 82 81 72 73 82 73 83 82 73 74 83 74 84 83 74 75 84 75 85 84 75 76 85 76 86 85 76 77 86 77 87 86 77 78 87 78 88 87 78 79 88 79 89 88 80 81 90 81 91 90 81 82 91 82 92 91 82 83 92 83 93 92 83 84 93 84 94 93 84 85 94 85 95 94 85 86 95 86 96 95 86 87 96 87 97 96 87 88 97 88 98 97 88 89 98 89 99 98"/>
+						</GeometryModel3D.Geometry>
+						<GeometryModel3D.Material>
+							<DiffuseMaterial>
+								<DiffuseMaterial.Brush>
+									<ImageBrush ImageSource="Molly.png" Stretch="Fill"/>
+								</DiffuseMaterial.Brush>
+							</DiffuseMaterial>
+						</GeometryModel3D.Material>
+					</GeometryModel3D>
+				</ModelVisual3D.Content>
+			</ModelVisual3D>
+			<ModelVisual3D x:Name="AmbientContainer">
+				<ModelVisual3D.Content>
+					<AmbientLight x:Name="Ambient" Color="Gray"/>
+				</ModelVisual3D.Content>
+			</ModelVisual3D>
+			<ModelVisual3D x:Name="DirectionalContainer">
+				<ModelVisual3D.Content>
+					<DirectionalLight x:Name="Directional" Color="#FF7F7F7F" Direction="0,0,-1">
+						<DirectionalLight.Transform>
+							<TranslateTransform3D OffsetZ="3" OffsetX="0" OffsetY="0"/>
+						</DirectionalLight.Transform>
+					</DirectionalLight>
+				</ModelVisual3D.Content>
+			</ModelVisual3D>
+		</Viewport3D>
+		<Rectangle HorizontalAlignment="Left" Margin="66,344,-53.015,-30" Stroke="Black" Width="687.015" RenderTransformOrigin="0.5,0.5" RadiusY="20.437" RadiusX="20.437" VerticalAlignment="Top" Height="140">
+			<Rectangle.Effect>
+				<DropShadowEffect Color="#FF095B26" BlurRadius="10" Direction="200" Opacity="0.75" ShadowDepth="8"/>
+			</Rectangle.Effect>
+			<Rectangle.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform ScaleY="-1"/>
+					<SkewTransform/>
+					<RotateTransform Angle="0.051"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Rectangle.RenderTransform>
+			<Rectangle.Fill>
+				<RadialGradientBrush>
+					<GradientStop Color="#FF152301" Offset="0"/>
+					<GradientStop Color="#FF93D630" Offset="1"/>
+				</RadialGradientBrush>
+			</Rectangle.Fill>
+		</Rectangle>
+		<ProgressBar x:Name="barraProgreso" Margin="258,467,154,-10" RenderTransformOrigin="0.5,0.5" Foreground="#FF47BED1" Value="100"/>
+		<Image Margin="69,375,-56,-6" Source="TITULO.png" Stretch="Fill"/>
+	</Grid>
 </Window>
