--- a/Aprendo con Molly/jUGADORES.xaml
+++ b/Aprendo con Molly/jUGADORES.xaml
@@ -169,7 +169,7 @@
 				<ImageBrush ImageSource="pack://siteoforigin:,,,/fondo1COPIA1.jpg"/>
 			</Rectangle.Fill>
 		</Rectangle>
-		<Viewport3D Margin="756,164,10,10">
+		<Viewport3D Margin="756,189.5,10,-15.5">
 			<Viewport3D.Camera>
 				<PerspectiveCamera FieldOfView="45" FarPlaneDistance="100" LookDirection="0.112,0.32,-13.868" NearPlaneDistance="0.1" Position="-0.112,-0.32,13.868" UpDirection="0.013,0.999,0.023"/>
 			</Viewport3D.Camera>
@@ -261,5 +261,16 @@
 		</Grid>
 		<Button Content="Button" HorizontalAlignment="Left" Height="23.72" Margin="944.833,10,0,0" Style="{DynamicResource BotonCerrar}" VerticalAlignment="Top" Width="25.011" Cursor="Hand" Click="Button_Click"/>
 		<Button Content="Button" HorizontalAlignment="Left" Height="23.72" Margin="914.822,10,0,0" Style="{DynamicResource Minimizar}" VerticalAlignment="Top" Width="25.011" Cursor="Hand" Click="Button_Click_1"/>
+		<ed:Callout AnchorPoint="0.885,1.94" Content="¡DIME COMO TE LLAMAS!" FontSize="14.667" HorizontalAlignment="Left" Height="130.008" Margin="629.002,103.419,0,0" StrokeThickness="8" VerticalAlignment="Top" Width="212.982" FontFamily="Cooper Black" CalloutStyle="Oval">
+			<ed:Callout.Fill>
+				<RadialGradientBrush Center="106.491,65.004" GradientOrigin="106.491,65.004" MappingMode="Absolute" RadiusY="65.004" RadiusX="106.491">
+					<GradientStop Color="#BFF0FFBF" Offset="0.424"/>
+					<GradientStop Color="#BFCFF2F3" Offset="0.916"/>
+					<GradientStop Color="#BFB0F0CA" Offset="0.676"/>
+					<GradientStop Color="#FFBFFCFF" Offset="0.006"/>
+					<GradientStop Color="#BFFFBFBF" Offset="0.171"/>
+				</RadialGradientBrush>
+			</ed:Callout.Fill>
+		</ed:Callout>
 	</Grid>
 </Window>
