--- a/Aprendo con Molly/App.xaml
+++ b/Aprendo con Molly/App.xaml
@@ -2,7 +2,7 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	x:Class="Aprendo_con_Molly.App"
-	StartupUri="Inicio.xaml">
+	StartupUri="VentanaEmergente.xaml">
 	<Application.Resources>
 		<!-- Debe definir aquí los recursos en el ámbito del nivel de aplicación. -->
 		<Style x:Key="BotonCerrar" TargetType="{x:Type Button}">
