--- a/Aprendo con Molly/App.xaml
+++ b/Aprendo con Molly/App.xaml
@@ -2,66 +2,71 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	x:Class="Aprendo_con_Molly.App"
-	StartupUri="VentanaEmergente.xaml">
+	StartupUri="Inicio.xaml">
 	<Application.Resources>
-		<!-- Debe definir aquí los recursos en el ámbito del nivel de aplicación. -->
-		<Style x:Key="BotonCerrar" TargetType="{x:Type Button}">
-			<Setter Property="Template">
-				<Setter.Value>
-					<ControlTemplate TargetType="{x:Type Button}">
-						<Grid>
-							<Ellipse Fill="#FFF50202" Stroke="Black"/>
-							<ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Content=""/>
-							<Ellipse x:Name="Cristal" Stroke="Black" Opacity="0">
-								<Ellipse.Fill>
-									<RadialGradientBrush>
-										<GradientStop Color="#FFE6E288" Offset="0.813"/>
-										<GradientStop Color="#BFFF0C00"/>
-									</RadialGradientBrush>
-								</Ellipse.Fill>
-							</Ellipse>
-						</Grid>
-						<ControlTemplate.Triggers>
-							<Trigger Property="IsFocused" Value="True"/>
-							<Trigger Property="IsDefaulted" Value="True"/>
-							<Trigger Property="IsMouseOver" Value="True">
-								<Setter Property="Opacity" TargetName="Cristal" Value="1"/>
-							</Trigger>
-							<Trigger Property="IsPressed" Value="True"/>
-							<Trigger Property="IsEnabled" Value="False"/>
-						</ControlTemplate.Triggers>
-					</ControlTemplate>
-				</Setter.Value>
-			</Setter>
-		</Style>
-		<Style x:Key="Minimizar" TargetType="{x:Type Button}">
-			<Setter Property="Template">
-				<Setter.Value>
-					<ControlTemplate TargetType="{x:Type Button}">
-						<Grid>
-							<Ellipse Fill="#FF3480EE" Stroke="Black"/>
-							<ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Content=""/>
-							<Ellipse x:Name="cristal" Stroke="Black" Opacity="0.015">
-								<Ellipse.Fill>
-									<RadialGradientBrush>
-										<GradientStop Color="#BF0914F0" Offset="0"/>
-										<GradientStop Color="#BFFFFBAB" Offset="0.749"/>
-									</RadialGradientBrush>
-								</Ellipse.Fill>
-							</Ellipse>
-						</Grid>
-						<ControlTemplate.Triggers>
-							<Trigger Property="IsFocused" Value="True"/>
-							<Trigger Property="IsDefaulted" Value="True"/>
-							<Trigger Property="IsMouseOver" Value="True">
-								<Setter Property="Opacity" TargetName="cristal" Value="1"/>
-							</Trigger>
-							<Trigger Property="IsPressed" Value="True"/>
-							<Trigger Property="IsEnabled" Value="False"/>
-						</ControlTemplate.Triggers>
-					</ControlTemplate>
-				</Setter.Value>
-			</Setter>
-		</Style>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="Simple Styles.xaml"/>
+			</ResourceDictionary.MergedDictionaries>
+			<!-- Debe definir aquí los recursos en el ámbito del nivel de aplicación. -->
+			<Style x:Key="BotonCerrar" TargetType="{x:Type Button}">
+				<Setter Property="Template">
+					<Setter.Value>
+						<ControlTemplate TargetType="{x:Type Button}">
+							<Grid>
+								<Ellipse Fill="#FFF50202" Stroke="Black"/>
+								<ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Content=""/>
+								<Ellipse x:Name="Cristal" Stroke="Black" Opacity="0">
+									<Ellipse.Fill>
+										<RadialGradientBrush>
+											<GradientStop Color="#FFE6E288" Offset="0.813"/>
+											<GradientStop Color="#BFFF0C00"/>
+										</RadialGradientBrush>
+									</Ellipse.Fill>
+								</Ellipse>
+							</Grid>
+							<ControlTemplate.Triggers>
+								<Trigger Property="IsFocused" Value="True"/>
+								<Trigger Property="IsDefaulted" Value="True"/>
+								<Trigger Property="IsMouseOver" Value="True">
+									<Setter Property="Opacity" TargetName="Cristal" Value="1"/>
+								</Trigger>
+								<Trigger Property="IsPressed" Value="True"/>
+								<Trigger Property="IsEnabled" Value="False"/>
+							</ControlTemplate.Triggers>
+						</ControlTemplate>
+					</Setter.Value>
+				</Setter>
+			</Style>
+			<Style x:Key="Minimizar" TargetType="{x:Type Button}">
+				<Setter Property="Template">
+					<Setter.Value>
+						<ControlTemplate TargetType="{x:Type Button}">
+							<Grid>
+								<Ellipse Fill="#FF3480EE" Stroke="Black"/>
+								<ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Content=""/>
+								<Ellipse x:Name="cristal" Stroke="Black" Opacity="0.015">
+									<Ellipse.Fill>
+										<RadialGradientBrush>
+											<GradientStop Color="#BF0914F0" Offset="0"/>
+											<GradientStop Color="#BFFFFBAB" Offset="0.749"/>
+										</RadialGradientBrush>
+									</Ellipse.Fill>
+								</Ellipse>
+							</Grid>
+							<ControlTemplate.Triggers>
+								<Trigger Property="IsFocused" Value="True"/>
+								<Trigger Property="IsDefaulted" Value="True"/>
+								<Trigger Property="IsMouseOver" Value="True">
+									<Setter Property="Opacity" TargetName="cristal" Value="1"/>
+								</Trigger>
+								<Trigger Property="IsPressed" Value="True"/>
+								<Trigger Property="IsEnabled" Value="False"/>
+							</ControlTemplate.Triggers>
+						</ControlTemplate>
+					</Setter.Value>
+				</Setter>
+			</Style>
+		</ResourceDictionary>
 	</Application.Resources>
 </Application>
