--- a/Aprendo con Molly/jUGADORES.xaml
+++ b/Aprendo con Molly/jUGADORES.xaml
@@ -271,5 +271,67 @@
 				</RadialGradientBrush>
 			</ed:Callout.Fill>
 		</ed:Callout>
+		<Canvas x:Name="imagenNene" HorizontalAlignment="Left" Height="430.968" Margin="298.426,134.183,0,0" VerticalAlignment="Top" Width="452.471" RenderTransformOrigin="0.5,0.5">
+			<Canvas.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="0.385"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Canvas.RenderTransform>
+			<Rectangle x:Name="imgIzda" Height="248.775" RadiusY="48" RadiusX="48" StrokeThickness="8" Canvas.Top="9.548" Width="148.192" RenderTransformOrigin="0.5,0.5" Canvas.Left="0.357" Fill="#FFF9F3F3">
+				<Rectangle.Effect>
+					<DropShadowEffect Color="#FF528911" Direction="229" Opacity="0.825"/>
+				</Rectangle.Effect>
+				<Rectangle.RenderTransform>
+					<TransformGroup>
+						<ScaleTransform/>
+						<SkewTransform/>
+						<RotateTransform Angle="-1.048"/>
+						<TranslateTransform/>
+					</TransformGroup>
+				</Rectangle.RenderTransform>
+			</Rectangle>
+			<Rectangle x:Name="imgDcha" RadiusY="48" RadiusX="48" StrokeThickness="8" RenderTransformOrigin="0.5,0.5" Height="248.775" Canvas.Left="295.168" Canvas.Top="7.435" Width="148.192" Fill="#FFFBF5F5">
+				<Rectangle.Effect>
+					<DropShadowEffect Color="#FF528911" Direction="200"/>
+				</Rectangle.Effect>
+				<Rectangle.RenderTransform>
+					<TransformGroup>
+						<ScaleTransform/>
+						<SkewTransform/>
+						<RotateTransform Angle="-1.048"/>
+						<TranslateTransform/>
+					</TransformGroup>
+				</Rectangle.RenderTransform>
+			</Rectangle>
+			<Rectangle x:Name="imgCentro" Height="286.97" RadiusY="48" RadiusX="48" StrokeThickness="8" Canvas.Top="38.36" Width="165.774" RenderTransformOrigin="0.5,0.5" Canvas.Left="140.921" Fill="#FFF7F4F4">
+				<Rectangle.Effect>
+					<DropShadowEffect Color="#FF528911" Direction="200" Opacity="0.905"/>
+				</Rectangle.Effect>
+				<Rectangle.RenderTransform>
+					<TransformGroup>
+						<ScaleTransform/>
+						<SkewTransform/>
+						<RotateTransform Angle="-1.048"/>
+						<TranslateTransform/>
+					</TransformGroup>
+				</Rectangle.RenderTransform>
+			</Rectangle>
+			<Button Content="Button" Height="79.5" Canvas.Left="42.411" Style="{DynamicResource btnAnterior}" Canvas.Top="325.064" Width="68.583"/>
+			<Button Content="Button" Height="79.5" Canvas.Left="340.33" Style="{DynamicResource btnPro}" Canvas.Top="325.064" Width="68.583"/>
+		</Canvas>
+		<ed:Callout x:Name="bocataImagen" AnchorPoint="0.885,1.94" Content="¿Qien eres?" FontSize="14.667" HorizontalAlignment="Left" Height="130.008" Margin="629.002,103.419,0,0" StrokeThickness="8" VerticalAlignment="Top" Width="212.982" FontFamily="Cooper Black" CalloutStyle="Oval">
+			<ed:Callout.Fill>
+				<RadialGradientBrush Center="106.491,65.004" GradientOrigin="106.491,65.004" MappingMode="Absolute" RadiusY="65.004" RadiusX="106.491">
+					<GradientStop Color="#BFF0FFBF" Offset="0.424"/>
+					<GradientStop Color="#BFCFF2F3" Offset="0.916"/>
+					<GradientStop Color="#BFB0F0CA" Offset="0.676"/>
+					<GradientStop Color="#FFBFFCFF" Offset="0.006"/>
+					<GradientStop Color="#BFFFBFBF" Offset="0.171"/>
+				</RadialGradientBrush>
+			</ed:Callout.Fill>
+		</ed:Callout>
 	</Grid>
 </Window>
